apps/landing/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  namespace: default
  labels:
    app: landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: ghcr.io/richardtan10176/landing:bcbf654a324aac5335b77cb836e31905f78b960c
          ports:
            - containerPort: 80
