apps/landing/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: default
spec:
  selector:
    app: landing
  ports:
    - port: 80
      targetPort: 80
